--- a/elen-master/css/bootstrap-datepicker.css
+++ b/elen-master/css/bootstrap-datepicker.css
@@ -487,7 +487,7 @@
   display: none;
   min-width: 160px;
   list-style: none;
-  background-color: #ffffff;
+  background-color: #000000;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.2);
   -webkit-border-radius: 5px;
