--- a/elen-master/css/icomoon.css
+++ b/elen-master/css/icomoon.css
@@ -2796,7 +2796,7 @@
 .icon-card_membership:before {
   content: "\e8f7";
 }
-.icon-card_travel:before {
+.icon-card_Skill:before {
   content: "\e8f8";
 }
 .icon-casino:before {
