--- a/elen-master/scss/style.scss
+++ b/elen-master/scss/style.scss
@@ -394,8 +394,8 @@ h1, h2, h3, h4, h5,
 }
 
 
-//PHOTOGRAPHY
-.photography-entry{
+//UIDesign
+.UIDesign-entry{
 	height: 270px;
 	display: block;
 	z-index: 0;
